package project;

public enum Sesso {
    Maschio,
    Femmina;
}
