@startuml
skinparam dpi 300
'https://plantuml.com/class-diagram
!theme vibrant
class Autenticazione {
  +email: String
  +password: String
}
Autenticazione "1" -- "1" Utente :AccessoUtente
Autenticazione "1" -- "1" Gestore :AccessoGestore
class Utente{
  +nome: String
  +cognome: String
  +dataNascita: Date
  +comunediNascita: String
  +sesso: sesso
  +codiceFiscale: String
}
class Gestore {
  +nome: String
  +descrizione: String [0,1]
  +sede: struct [Città: string, Via: string, Civico: string, Provincia: string, Cap: integer]
  +telefono: String
}
class Operatore{
}
class Studente{
}
enum sesso{
M
F
}
Utente <|--- Operatore
Utente <|--- Studente
note "{ Partial , Overlapping }" as N1
Studente . N1
Operatore . N1

Gestore "1" -- "0..*" Corso:Possiede
Corso "*" -- "*" Studente
Corso "*" -- "1..*" Operatore
(Corso,Operatore)..Coordina
class Coordina{
Richiesta: boolean
}
class Corso{
  +titolo: String
  +descrizione: String [0,1]
  +iscrizioniMassime: integer
  +tassoPresenzeMinime: integer
  +numeroLezioni: integer
  +Privato: boolean
}
class Lezione{
  +titolo: String
  +descrizione: String [0,1]
  +dataoraInizio: Timestamp
  +durata: Time
}
Corso "1" -- "1..*" Lezione:Svolto
(Corso, Studente) .. Iscritti
Lezione "*" -- "*" Studente
(Lezione,Studente) .. Prenotazioni
class Prenotazioni{
+Presente: boolean
}
class Iscritti{
+idonei: boolean
+Richiesta: boolean
}
class Statistiche{
  +presenzeMinime: integer
  +presenzeMassime: integer
  +presenzeMedie: integer
  +percentualeRiempimentoMedia: integer
}
Corso "1" -- "1" Statistiche:Associo
class AreaTematica{
  +Tag: String
}
Corso "*" -- "1..*" AreaTematica:Appartengono

@enduml